@@ -95,68 +95,6 @@ sub test_interfaces
 
 # ---
 
-$hash = &xst_print_conf_get ();
-delete $$hash {'lp'};
-print $$hash{'lp0'}{'sd'} . "\n";
-# $$hash {'lp0'}->{'spooldir'} = "/var/pekk";
-# $$hash {'lp0'}->{'device'} = "pekk-port";
-$$hash {'lp0'}->{'suppress_headers'} = 0;
-&xst_print_conf_set ($hash);
 
-&xst_debug_print_struct ($hash);
-
-# &xst_replace_remove_cap_section ("/etc/printcap", "lp");
-
-# &xst_replace_printcap ("/etc/printcap", "lp", "lpekk", "#", "100");
-# &xst_replace_printcap ("/etc/printcap", "newlp", "loff", "", 1);
-# &xst_replace_printcap_remove_printer ("/etc/printcap", "lp");
-
-# $buf = &xst_replace_load_printcap_buffer ("/etc/printcap");
-#
-# for $i (@$buf)
-# {
-#   print $i;
-# }
-
-
-
-# @arr = &xst_parse_cap_sections ("/etc/termcap");
-
-# for $i (@arr)
-# {
-#   my $tc = &xst_parse_cap      ("/etc/termcap", $i, "tc");
-#   my $am = &xst_parse_cap_bool ("/etc/termcap", $i, "am");
-#    print "$i\t\t($tc)";
-# 	print " (am)" if ($am == 1);
-#	print "\n";
-# }
-
-# $arr = &xst_filesys_parse_fstab ("/etc/fstab");
-# $arr = &xst_filesys_parse_mtab ("/etc/mtab");
-
-# print @arr[0] . "\n";
-
-# &xst_filesys_table_remove ($arr, &xst_filesys_table_find ($arr, "point", "/"));
-# &xst_filesys_table_remove ($arr, &xst_filesys_table_find ($arr, "point", "/mnt/floppy"));
-# &xst_debug_print_struct ($arr);
-
-# $table = &xst_share_parse_smb_conf ("/etc/samba/smb.conf");
-# &xst_share_replace_smb_conf ("/etc/samba/smb.conf.test", $table);
-
-# &test_interfaces();
-# &test_media();
-
-# be_service_enable(90, "-d pekk", "samba", "smbd", "smb", "httpd");
-# be_service_disable(15, "-d pekk", "samba", "smbd", "smb", "httpd");
-
-# be_run("ls /etc");
-# be_run("ls /etc");
-# be_run("ls /etc");
-# be_run("ls /etc");
-# be_run("grokk pekk fette");
-# be_run("grokk pekk fette");
-# be_run("grokk pekk fette");
-
-# be_locate_tool("pekk");
-# be_locate_tool("pekk");
-
+$tree = &xst_xml_scan ("/etc/alchemist/namespace/printconf/local.adl");
+&xst_debug_print_struct ($tree);
